https://github.com/openmdx/openmdx4/issues/1